jump scroll pos fix

--- a/applications/Inertia/css/global.css
+++ b/applications/Inertia/css/global.css
@@ -150,3 +150,7 @@ div.externalLegend {
     margin-left: -5px;
     width: 100%;
 }
+
+body {
+    min-height:1200px;
+}
